--- a/wine_sqltable.ipynb
+++ b/wine_sqltable.ipynb
@@ -23,24 +23,26 @@
    "outputs": [],
    "source": [
     "# Path of the CSV file\n",
-    "csvfile = \"winemag-data-130k-v2.csv\""
+    "csvfile = \"winemag-data-130k-v2.csv\"\n",
+    "regionfile = \"region_data.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Read CSV file into a pandas DataFrame\n",
-    "df = pd.read_csv(csvfile, dtype=object)"
+    "df = pd.read_csv(csvfile, dtype=object)\n",
+    "region_df = pd.read_csv(regionfile, dtype=object)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +65,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,8 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# df.loc[df.price.isnull()]"
@@ -83,22 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Python SQL toolkit and Object Relational Mapper\n",
     "import sqlalchemy\n",
     "from sqlalchemy import create_engine, MetaData\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy import Column, Integer, String, Numeric, Text, Float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -122,8 +125,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use `declarative_base` from SQLAlchemy to model the table as an ORM class\n",
@@ -149,12 +154,22 @@
     "\n",
     "    def __repr__(self):\n",
     "        return '<Wine %r>' % (self.name)\n",
-    "   "
+    "\n",
+    "class Coord(Base):\n",
+    "    __tablename__= 'coordinate'\n",
+    "    \n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    country = Column(String)\n",
+    "    region_1 = Column(String)\n",
+    "    coordinates = Column(String)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return '<Coord %r>' % (self.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -179,70 +194,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Save the reference to the `wine` table as a variable called `table`\n",
-    "table = sqlalchemy.Table('wine', metadata, autoload=True)"
+    "wine_table = sqlalchemy.Table('wine', metadata, autoload=True)\n",
+    "coord_table = sqlalchemy.Table('coordinate', metadata, autoload=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x144abcc0>"
+       "<sqlalchemy.engine.result.ResultProxy at 0xa2c2d68>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conn.execute(table.delete())"
+    "conn.execute(wine_table.delete())\n",
+    "conn.execute(coord_table.delete())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data = df.to_dict(orient='records')"
+    "data = df.to_dict(orient='records')\n",
+    "coord_data = region_df.to_dict(orient='records')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1dbc6320>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x1be8deb8>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conn.execute(table.insert(), data)"
+    "conn.execute(wine_table.insert(), data)\n",
+    "conn.execute(coord_table.insert(), coord_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +274,7 @@
        " (4, 'US', \"Vintner's Reserve Wild Child Block\", 87, 65, 'Oregon', 'Willamette Valley', 'Willamette Valley', 'Paul Gregutt', '@paulgwine\\xa0', \"Sweet Cheeks 2012 Vintner's Reserve Wild Child Block Pinot Noir (Willamette Valley)\", 'Pinot Noir', 'Sweet Cheeks')]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,6 +282,30 @@
    "source": [
     "# Test that the insert works by fetching the first 5 rows. \n",
     "conn.execute(\"select * from wine limit 5\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Italy', 'Etna', '[37.751005, 14.9934349]'),\n",
+       " (2, 'US', 'Willamette Valley', '[44.942554, -122.9337615]'),\n",
+       " (3, 'US', 'Lake Michigan Shore', '[43.8348105, -85.0720293]'),\n",
+       " (4, 'Spain', 'Navarra', '[42.6953909, -1.6760691]'),\n",
+       " (5, 'Italy', 'Vittoria', '[35.4669667, -97.5428508]')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.execute(\"select * from coordinate limit 5\").fetchall()"
    ]
   },
   {
